Fixed issue "page buttons are misaligned"

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -75,7 +75,7 @@
 }
 
 .btn-group-justified {
-    width: calc(100% - 30px);
+    width: calc(100% - 30px) !important;
     margin: 15px 0 15px 15px;
 }
 
